feat: add create exchange endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=crud-security-webflux
 
 # Databse configuration
-spring.r2dbc.url=r2dbc:h2:mem:///webfluxdb;
-spring.r2dbc.username=sa
-spring.r2dbc.password=password
+#spring.r2dbc.url=r2dbc:h2:mem:///webfluxdb;
+#spring.r2dbc.username=sa
+#spring.r2dbc.password=password
+
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/webfluxdb
+spring.r2dbc.username=root
+spring.r2dbc.password=root
+
+
 
 # Logger
 server.error.include-message=always
